--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
-  "name": "io.cordova.hellocordova",
-  "displayName": "HelloCordova",
-  "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
-  "main": "index.js",
+  "name": "petcare-plus",
+  "displayName": "PetCare+",
+  "version": "2.0.0",
+  "description": "Aplicación para gestionar la salud de tus mascotas",
+  "main": "server.js",
   "scripts": {
+    "start": "node server-mongo.js",
+    "dev": "nodemon server-mongo.js",
+    "start:legacy": "node server.js",
+    "dev:legacy": "nodemon server.js",
+    "frontend": "cd www && npx http-server -p 8000 -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "ecosystem:cordova"
+    "mascotas",
+    "veterinaria",
+    "salud",
+    "api"
   ],
-  "author": "Apache Cordova Team",
-  "license": "Apache-2.0",
+  "author": "PetCare Team",
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.19.3"
+  },
   "devDependencies": {
-    "cordova-browser": "^7.0.0"
+    "cordova-browser": "^7.0.0",
+    "nodemon": "^3.0.2"
   },
   "cordova": {
     "platforms": [
