--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 PORT=5000
 
 # Clave secreta para JWT (CAMBIAR EN PRODUCCIÓN)
-JWT_SECRET=tu_clave_secreta_super_segura_2024
+JWT_SECRET=ClaveSecretaMuySegura123!
 
 # URL de la API (usar en frontend)
 API_URL=http://localhost:5000
