--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
   "scripts": {
+    "dev": "cordova run browser",
+    "start": "cordova run browser",
+    "serve": "npx http-server ./www -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
