--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "platforms": [
       "browser",
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-statusbar": {}
+    }
   }
 }
